Footer no longer overlaps content

--- a/css/Site.css
+++ b/css/Site.css
@@ -9,7 +9,7 @@
 .jumbotron{
 	margin-top: 50px;
     background-image: url('../Images/Me.JPG');
-    height: 100vh;
+   	min-height: 100vh;
 	background-repeat: no-repeat;
 	background-size: 100%;
     background-position: center bottom;
@@ -101,7 +101,6 @@ article, aside, figure, footer, header, hgroup, nav, section {
 html .fixedFooter {
     z-index: 9999;
     position: fixed;
-    clear: both;
     bottom: 0;
     width: 100%;
     height: 35px;
@@ -111,6 +110,10 @@ html .fixedFooter {
     font-family: proxima_novasemibold,'Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 12px;
     color: white;
+}
+
+#clearfooter {
+	height: 50px;
 }
 
   .btn:after {
